fix: Lighten background on smaller screens

--- a/assets/css/cover.css
+++ b/assets/css/cover.css
@@ -309,6 +309,11 @@ body {
       margin-top: 20%;
       color: #fff;
     }
+
+    .site-wrapper {
+      background-color: rgba(255,255,255,0.3);
+      background-blend-mode: lighten;
+    }
 }
 
 /* Modal styles */
